package decoratorpatten;
/**
 *  @Author: liyuzhan
 *  @classDesp： 定义对象接口
 *  @Date: 2020/3/5 10:47
 *  @Email: 1031759184@qq.com
 */
public abstract class Component {
    /**
     * 操作接口
     */
    public abstract void  operation();
}
